--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,14 @@
 /* GERAL */
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 * {
     margin: 0;
     padding: 0;
+    gap: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -19,17 +19,20 @@ body {
 
 /* IMAGENS */
 
-#imagem-principal, #div-principal {
-    height: fixed 492px;
+#imagem-mobile, div-principal {
+    width: 350px;
 }
 
-
+#imagem-desktop {
+    display: none;
+}
 
 /* TEXTO */
 
 h1 {
     font-family: Josefin Sans;
     font-size: 36px;
+    line-height: 36px;
     font-weight: 600;
     color: #111313;
 }
@@ -51,6 +54,7 @@ h3 {
 p {
     font-family: Open Sans;
     font-size: 16px;
+    line-height: 22px;
     font-weight: 400;
 }
     p.date {
@@ -77,7 +81,7 @@ button {
     flex-wrap: nowrap;
     align-items: center;
 
-    width: moz-fit-content;
+    width: fit-content;
     gap: 15px;
     padding: 10px 15px;
     margin: 68px 0 7px 0;
@@ -89,31 +93,42 @@ button {
 
 /* SEÇÕES */
 
-main {
-    padding: 8%;
+menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-content: center;
     align-items: center;
 
-    width: 875px;
+    gap: 0;
+
+    /* width: 875px; */
     /* height: 491.63px; */
-    top: 318px;
-    left: 428px;
+    /* top: 318px; */
+    /* left: 428px;  */
 }
 
 #div-principal {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 
     background: #DFDFD6;
-    width: 584px;
-    padding: 50px 30px 40px 30px;
-    border-radius: 0 30px 30px 0;
+    width: 350px;
+    padding: 25px 30px;
+    border-radius: 0 0 30px 30px;
+}
+
+#div-texto {
+    gap: 10px;
 }
 
 
@@ -135,11 +150,24 @@ section {
 
 /* RESPONSIVIDADE */
 
-@media screen and (max-width: 782px) {
-    section {
-        flex-direction: column;
+@media screen and (min-width: 782px) {
+    #imagem-mobile {
+        display: none;
     }
-    #imagem-principal {
-        transform: rotate(45deg);
+    #imagem-desktop {
+        display: initial;
+    }
+    #imagem-desktop, #div-principal {
+        height: 490px;
+    }
+    #div-principal {
+        width: 584px;
+        border-radius: 0 30px 30px 0;
+    }
+    section {
+        flex-direction: row;
+    }
+    #div-texto {
+        gap: 30px;
     }
 }
