--- a/estilo.css
+++ b/estilo.css
@@ -93,12 +93,14 @@ button {
 
 /* SEÇÕES */
 
-menu {
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     align-items: center;
+
+    padding: 0 ;
 }
 
 section {
@@ -107,13 +109,6 @@ section {
     justify-content: center;
     align-content: center;
     align-items: center;
-
-    gap: 0;
-
-    /* width: 875px; */
-    /* height: 491.63px; */
-    /* top: 318px; */
-    /* left: 428px;  */
 }
 
 #div-principal {
@@ -127,8 +122,8 @@ section {
     border-radius: 0 0 30px 30px;
 }
 
-#div-texto {
-    gap: 10px;
+#titulo-principal {
+    margin-bottom: 32px;
 }
 
 
@@ -146,6 +141,11 @@ section {
     align-items: center;
 }
 
+#perfil-doguito {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
 
 
 /* RESPONSIVIDADE */
